﻿###1.4.4.4#!#20201210#!#
1.4.4.4
- Fixed OpSimpleButton's label's position is not updating
- Fixed Real-time translation function for mod translators
1.4.4.3
- Fixed LabelTest functioning incorrectly with ComMod's scaled font
- Fixed potential NullRef spam in exceptionLog from 1.4.4.2
- Tweaked invaild ModID handler
###1.4.4.2#!#20201031#!#
1.4.4.2
- Minor clean-up in old codes regarding string.Concat
- Removed arbitrary minimum size limit for OpSlider
- When you mod have invalid (for folder name) ModID, CM will try with Mod Type name, assembly name, then throw an exception if all three have failed
 + CM will still log that your mod has invalid ModID, though
- Changed Japanese's language code from jpn to jap (first three letters)
- Mods can manually call ConfigMenu.ResetCurrentConfig() to reset own OptionInterface
 + Reset now happens when the screen has faded out, making the visual more pleasing
1.4.4.1
- Fixed the new feature breaking when the mod does not support translation
1.4.4.0
- The translators for mods can now test their translation real time
 + Having the translation txt file in Rain World / ModConfigs / <ModID> folder will load that instead
 + Pressing Reset Config button (or leaving the Mod Config screen and returning) will reload the external translation txt file
- Made OpScrollBox's back rectangular 2 px larger so the contents won't overlap with the bounding box
###1.4.3.A#!#20200923#!#
1.4.3.A
- LabelTest.GetWidth no longer breaks in Initialize
1.4.3.9
- Fixed non-pixel perfect visual glitch with OpScrollBox
 + Thanks to Slime_Cubed's help
- Default offset for UIelements is moved by 0.01 px upwards
 + This would not affect users or modders, other than fixing visual glitches
1.4.3.8
- Fixed OpLongLabel's verticalAlignment
 + Texts were one line above where they're supposed to be, which is now fixed.
1.4.3.7
- Add LabelTest static class to test FLabel's width internally
 + Using FLabel.textRect from Slime_Cubed's suggestion